# lab-robot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: pei-spec.md
examples/: 01_opentrons_pipette.py
robots/_robot_template/: MEMORY.md  SOUL.md  driver.py  skill.yaml
robots/_robot_template/tests/: test_driver.py
robots/opentrons_ot2/: MEMORY.md  SOUL.md  __init__.py  driver.py  models.py  protocol_gen.py  skill.yaml
robots/opentrons_ot2/tests/: test_driver.py  test_models.py  test_protocol_gen.py
src/lab_robot/: __init__.py  base.py  safety.py  schema.py  types.py
tests/: test_base.py  test_safety.py  test_schema.py  test_types.py
